# SiglentDevices

./: README.md  __init__.py  pyproject.toml
SiglentDevices/: RIGOL_DG1032Z.py  SDS5034.py  SPD3303.py  __init__.py
doc/: SDS5034_doc.md
docs/: README.md
docs/SiglentDevices/: RIGOL_DG1032Z.md  SDS5034.md  SPD3303.md  SiglentBase.md  index.md
docs/src/: RIGOL_DG1032Z.md  SDS5034.md  SPD3303.md  SiglentBase.md  index.md
src/: RIGOL_DG1032Z.py  SDS5034.py  SPD3303.py  SiglentBase.py  __init__.py
tests/: test_SDS5034.py
